tests/integration/snapshots/integration__toml__cli_ignore_adds_to_toml.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").arg(\"--ignore-rules\").arg(\"any_is_na\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [2:1] any_duplicated `any(duplicated(...))` is inefficient. Use `anyDuplicated(...) > 0` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
. --ignore-rules any_is_na
