tests/integration/snapshots/integration__toml__cli_select_overrides_toml.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").arg(\"--select-rules\").arg(\"any_duplicated,length_levels\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [2:1] any_duplicated `any(duplicated(...))` is inefficient. Use `anyDuplicated(...) > 0` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
. --select-rules any_duplicated,length_levels
