tests/integration/snapshots/integration__toml__empty_select_array-2.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in field `select` in 'flir.toml': "" (empty or whitespace-only not allowed)

----- args -----
.
