tests/integration/snapshots/integration__toml__invalid_toml_ignore_rule.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in field `ignore` in 'flir.toml': foo, bar

----- args -----
.
